# uuid-bytes

./: CHANGELOG.md  LICENSE  uuid-bytes.cabal
src/: UUID.hs
test/: Main.hs
