cabal-version: >=1.10
name: uuid-bytes
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Zachary Churchill
maintainer: zacharyachurchill@gmail.com
-- copyright:
-- category:
build-type: Simple
extra-source-files: CHANGELOG.md

library
  -- other-modules:
  -- other-extensions:
  ghc-options: -Wall
  exposed-modules:
    UUID
  build-depends: 
      base >=4.13 && <4.14
    , wide-word
    , byteslice >=0.2.1 && <0.3
    , bytesmith >=0.3.3 && <0.4
    , primitive
    , small-bytearray-builder
    , natural-arithmetic
  hs-source-dirs: src
  default-language: Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
      HUnit
    , tasty
    , base
    , tasty-hunit
    , uuid-bytes
    , wide-word
    , byteslice
    , primitive
    , natural-arithmetic
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

